--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "outputPath": "dist/velo-jewel",
+                        "outputPath": "dist",
                         "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": [
@@ -27,7 +27,9 @@
                         "inlineStyleLanguage": "scss",
                         "assets": [
                             "src/favicon.ico",
-                            "src/assets"
+                            "src/assets",
+                            "src/package.json",
+                            "src/electron.prod.js"
                         ],
                         "styles": [
                             "src/styles.scss"
